# zurihac2022

./: .gitignore  README.md  zurihac2022.cabal
src/: Main.hs
