cabal-version:      2.4
name:               zurihac2022
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable zurihac2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    --     TradingCardGame

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.1.0
        , text

    hs-source-dirs:   src
    default-language: Haskell2010
